# herbarium

./: .gitignore  Makefile  asset-manifest.json  index.html  package-lock.json  package.json
leaf/: Cargo.toml
leaf/src/: lib.rs
public/: index.html
src/: App.tsx  Header.tsx  Images.tsx  Styles.tsx  worker.js
src/Details/: Edge.tsx  GlobalPositioningSystem.tsx  QuickResponse.tsx
static/js/: 606.5c898e74.chunk.js  606.5c898e74.chunk.js.map  main.a4384513.js  main.a4384513.js.LICENSE.txt  main.a4384513.js.map
static/media/: leaf_bg.f87ed4bc7245cbdbc330.wasm
