[package]
name = "leaf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
kamadak-exif = "0.5.4"
qrcode-generator = "4.1.6"
# image = "0.24.2"
imageproc = "0.23.0"

[dependencies.image]
version = "0.24.2"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
