[package]
name = "leaf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
kamadak-exif = "0.5"
qrcode-generator = "4.1"
# image = "0.24.2"
imageproc = {version = "0.23", default-features = false}

[dependencies.image]
version = "0.24"
default-features = false
features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
